--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,8 +39,6 @@ jobs:
           cat > deploy_expect.sh << 'EOF'
           #!/usr/bin/expect -f
           set timeout -1
-          log_file -a /tmp/deploy.log
-          send_user "Starting SSH connection...\n"
           spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud
           
           expect {
@@ -56,39 +54,25 @@ jobs:
                   exp_continue
               }
               "root@*" {
-                  send_user "Connected to server\n"
                   send "docker pull bestbest/line-chatbot:${{ github.sha }}\r"
-                  expect {
-                      "Status: Downloaded newer image" {
-                          send_user "Image pulled successfully\n"
-                      }
-                      "Status: Image is up to date" {
-                          send_user "Image is up to date\n"
-                      }
-                      default {
-                          send_user "Unexpected Docker response\n"
-                          exit 1
-                      }
-                  }
-                  send "docker stop optimistic_haslett || true\r"
-                  send "docker rm optimistic_haslett || true\r"
-                  send "docker run -d \
-                        --name optimistic_haslett \
-                        -p 6789:6789 \
-                        -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
-                        -e CHANNEL_SECRET=${{ secrets.CHANNEL_SECRET }} \
-                        -e CHANNEL_TOKEN=${{ secrets.CHANNEL_TOKEN }} \
-                        bestbest/line-chatbot:${{ github.sha }}\r"
-                  send "exit\r"
-              }
-          }
-          expect eof
-          send_user "Finished deployment script.\n"
-          close
-          EOF
-          chmod +x deploy_expect.sh
-          ./deploy_expect.sh
-          cat /tmp/deploy.log
+                  send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
+                    send "docker run -d \
+                          --name optimistic_haslett \
+                          -p 6789:6789 \
+                          -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+                          -e CHANNEL_SECRET=${{ secrets.CHANNEL_SECRET }} \
+                          -e CHANNEL_TOKEN=${{ secrets.CHANNEL_TOKEN }} \
+                          bestbest/line-chatbot:${{ github.sha }}\r"
+                    send "exit\r"
+                }
+            }
+            expect eof
+            send_user "Finished deployment script.\n"
+            close
+            EOF
+            chmod +x deploy_expect.sh
+            ./deploy_expect.sh
+            cat /tmp/deploy.log
 
       - name: Clean up
         run: |
