--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,16 +40,15 @@ jobs:
         #!/usr/bin/expect -f
         set timeout -1
         spawn ssh -o BatchMode=yes -o StrictHostKeyChecking=no -p 3022 4504@gate.manage.proen.cloud
-        
         expect {
             -re {.*Permanently added.*} {
                 exp_continue
             }
-            -re {.*Enter \[0-5\]:} {
+            -re {.*Enter \\[0-5\\]:} {
                 send "3\r"
                 exp_continue
             }
-            -re {.*Enter \[0-2\]:} {
+            -re {.*Enter \\[0-2\\]:} {
                 send "2\r"
                 exp_continue
             }
