--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Deploy Line-chatbot
 on:
   push:
     branches:
-      - main
+      - main  
 
 jobs:
   deploy:
@@ -56,7 +56,7 @@ jobs:
             "root@*" {
                 send "docker pull bestbest/line-chatbot:${{ github.sha }}\r"
                 send "docker stop optimistic_haslett && docker rm optimistic_haslett\r"
-                send "docker run -d --name optimistic_haslett -p 6789:6789 -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} -e CHANNEL_SECRET=${{ secrets.CHANNEL_SECRET }} -e CHANNEL_TOKEN=${{ secrets.CHANNEL_TOKEN }} bestbest/line-chatbot:${{ github.sha }}\r"
+                send "docker run -d --name optimistic_haslett -p 6789:6789 bestbest/line-chatbot:${{ github.sha }}\r"
                 send "exit\r"
             }
         }
@@ -65,4 +65,3 @@ jobs:
         EOF
         chmod +x deploy_expect.sh
         ./deploy_expect.sh
-
