--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,10 +31,10 @@ jobs:
         file: Dockerfile
         push: true
         tags: bestbest/line-chatbot:${{ github.sha }}
-        build-args: 
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          CHANNEL_SECRET: ${{ secrets.CHANNEL_SECRET }}
-          CHANNEL_TOKEN: ${{ secrets.CHANNEL_TOKEN }}
+        build-args: |
+          OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+          CHANNEL_SECRET=${{ secrets.CHANNEL_SECRET }}
+          CHANNEL_TOKEN=${{ secrets.CHANNEL_TOKEN }}
 
     - name: Deploy via SSH
       run: |
